fixed loading bar on mobile

--- a/styles.css
+++ b/styles.css
@@ -162,7 +162,7 @@ Mobile design
     }
 
     #loadingMessage {
-        margin: 10px 0px;
+        margin: 0px 10px;
     }
 
 }
